2000-08-17  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* configure.in, libs/Makefile.in:
	    library building order correction, and autoconfiguration
	    straightening so that lack of dbm databases is reported
	    corrently. (The NDBM even with its faults is sort of ok,
	    bit the DBM - its predecessor - is not...)

2000-08-02  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* include/libz.h, scheduler/scheduler.c, scheduler/update.c,
	  lib/esyslib.c, include/ta.h:
	    To track strange looking  eunlink()  problem reported by
	    Eugene my first approach is to add identity tags for eunlink()
	    calls so I can have some additional clue as to *which* of
	    four possible places the problems are occurring at.
	    (Fift place is impossible, fortunately.)

2000-08-02  Eugene Crosser <crosser@online.ru>

	* transports/smtp/getmxrr.c:
	    Yet another wrong index variable usage -- one which affects
	    MX-list purge of self-identity matching of MX servers.
	    Symptom:  "No MX, no address"
	    [mea: That may have been part of the problem,  getaddrinfo()
	          yielding EAI_NONAME in places of EAI_AGAIN may have
		  been another.. -- at least for me.]
	
2000-08-02  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>
	
	* libc/getaddrinfo.c, libc/getnameinfo.c:
	    Picked lattest versions out from  GLIBC 2.1.92 source,
	    and cleaned it up to be simple single-threaded thing
	    without locks, and without IPv6 support.
	    STILL PROPABLY LEAKS MEMORY!

2000-08-01  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    Some debug printout revisions.  Somewhat embarassing to have
	    a SEGV at debug code when work-code without it works..

	* configure.in:
	    Modifications on how NDBM vs. GDBM vs. BSD DB libraries
	    are linked to ZMailer.  NDBM must be explicitely linked
	    as '-lc' if it is at libc, *and* that linkage reference
	    must be before any other as only then will there be change