@@ -1,5 +1,11 @@
 2000-08-17  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>
 
+	* smtpserver/policytest.c, router/libdb/bsdhash.c,
+	  router/libdb/bsdbtree.c, utils/makedb/makedb.c,
+	  utils/vacation/vacation.c:
+	    RedHat 6.0 BSD DB surprised somewhat... Fixes for
+	    the configuration senses.
+
 	* configure.in, libs/Makefile.in:
 	    library building order correction, and autoconfiguration
 	    straightening so that lack of dbm databases is reported
